<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Android Door</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="button_login">Login</string>
    <string name="button_newUser">Create New User</string>
    <string name="title_activity_prompt_password">PromptPassword</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_create_new_user">CreateNewUser</string>
    <string name="create_user">Username</string>
    <string name="forgot_password">I forgot my password</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="title_activity_forgot_password">ForgotPassword</string>
    <string name="button_unlock">Unlock</string>
    <string name="button_lock">Lock</string>
    <string name="button_reset">Change pin + questions</string>
    <string name="title_activity_reset_password">ResetPassword</string>
    <string name="button_complete_reset">Reset</string>
    <string name="title_activity_security_questions">SecurityQuestions</string>
    <string name="security_title">Security Questions</string>
    <string name="button_bluetooth">Bluetooth</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_bluetooth">bluetooth</string>
    <string name="bluetooth_disable">Disable</string>
    <string name="bluetooth_enable">Enable</string>
    <string name="bluetooth_paired">Paired</string>
    <string name="bluetooth_scan">Scan</string>
    <string name="title_activity_paired_devices">paired_devices</string>
    <string name="text_list_devices">Devices</string>
    <string name="text_pair">Pair</string>
    <string name="text_bluetooth_off">Bluetooth is Off</string>
    <string name="text_bluetooth_on">Bluetooth is On</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="splash_screen_title">Android Door</string>
    <string name="security_vacation">Where was your first vacation?</string>
    <string name="security_car">What was the make/model of your first car?</string>
    <string name="reset_password">Reset Password</string>
    <string name="save_prefs">Save user preferences</string>

</resources>
