<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tiffanyislegmail.bluetoothdoorandroidapp.MainMenu">

    <Button
        android:id="@+id/lockDoorBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_lock" />

    <Button
        android:id="@+id/unlockDoorBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_unlock" />

    <Button
        android:id="@+id/resetPasswordBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_reset"
        android:onClick="clickResetPassword"/>


</LinearLayout>
