<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/appbackground">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Welcome"
        android:textSize="50sp"/>
    <TextView
        android:id="@+id/displayUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text=""
        android:textSize="30sp"/>
    <TextView
        android:id="@+id/failedLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text=""
        android:textColor="@color/red"
        android:textSize="20sp"/>
    <Button
        android:id="@+id/loginBtn"
        android:layout_gravity="center_horizontal"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:text="@string/button_login"
        android:textColor="@color/black"
        android:onClick="clickLogin"
        android:textSize="40sp"
        android:background="@drawable/roundbutton" />
    <Button
        android:id="@+id/createNewUserBtn"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:text="@string/button_newUser"
        android:textColor="@color/black"
        android:onClick="clickNewUser"
        android:textSize="25sp"
        android:background="@drawable/roundbutton"/>
    <Button
        android:id="@+id/forgotPassword"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:onClick="clickNewUser"
        android:textSize="15sp"
        android:background="@drawable/roundbutton"/>

</LinearLayout>
